fixed spacing

--- a/style.css
+++ b/style.css
@@ -22,16 +22,14 @@ h1 {
 .card-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between; /* Adjust as needed */
+    justify-content: space-between;
 }
 
 .card {
     height: 100%;
-    margin-bottom: 20px; 
     display: flex;
     flex-direction: column;
     border: 3px solid white;
-    flex-grow: 1;
 }
 
 img.image-fluid {
